# asquire-tyle

./: .gitignore  README.md  settings.gradle
asquire-moon/: build.gradle  google-services.json
asquire-moon/release/: output-metadata.json
asquire-moon/src/androidTest/java/aashi/fiaxco/asquiremoon0x0b/: ExampleInstrumentedTest.java
asquire-moon/src/main/: AndroidManifest.xml
asquire-moon/src/main/cpp/: CMakeLists.txt  jni-bridge.cpp
asquire-moon/src/main/cpp/asqengine/: AsqPlyEngine.cpp  AsqRecEngine.cpp
asquire-moon/src/main/java/aashi/fiaxco/asquiremoon0x0b/: RecordActivity.java  SurveyActivity.java  UserIDActivity.java
asquire-moon/src/main/java/aashi/fiaxco/asquiremoon0x0b/asqengine/: AsqEngine.java  AsqViewModel.java  AudioService.java  UploadService.java
asquire-moon/src/main/java/aashi/fiaxco/asquiremoon0x0b/fragments/: QuestionFragment.java  QuestionViewModel.java
asquire-moon/src/main/java/aashi/fiaxco/asquiremoon0x0b/providestuff/: Question.java  Questions.java  Stimulus.java  Timer.java
asquire-moon/src/main/res/drawable/: close.xml
asquire-moon/src/main/res/drawable-v24/: button_back.xml
asquire-moon/src/main/res/layout/: activity_main.xml  activity_record.xml  activity_survey.xml  question_fragment.xml
asquire-moon/src/main/res/values/: arrays.xml  strings.xml  styles.xml  themes.xml
asquire-moon/src/main/res/values-night/: themes.xml
asquire-moon/src/test/java/aashi/fiaxco/asquiremoon0x0b/: ExampleUnitTest.java
asquire-tyle/: build.gradle  google-services.json
asquire-tyle/release/: output-metadata.json
asquire-tyle/src/androidTest/java/aashi/fiaxco/asquiretyle0x0a/: ExampleInstrumentedTest.java
asquire-tyle/src/main/: AndroidManifest.xml
asquire-tyle/src/main/assets/: cough.model  cough_1.model  cough_72.model  feats_0.txt  model.txt
asquire-tyle/src/main/cpp/: CMakeLists.txt  jni-bridge.cpp
asquire-tyle/src/main/cpp/asqengine/: AsqPlyEngine.cpp  AsqPlyEngine.h  AsqRecEngine.h
asquire-tyle/src/main/cpp/prediction/: Prediction.cpp  Prediction.h
asquire-tyle/src/main/java/aashi/fiaxco/asquiretyle0x0a/: RecordActivity.java  SurveyActivity.java  UserIDActivity.java
asquire-tyle/src/main/java/aashi/fiaxco/asquiretyle0x0a/asqengine/: AsqEngine.java  AsqViewModel.java  AudioService.java  UploadService.java
asquire-tyle/src/main/java/aashi/fiaxco/asquiretyle0x0a/providestuff/: Stimulus.java  SurveyWebView.java  Timer.java
asquire-tyle/src/main/res/drawable/: add_fab.xml  asquire_logo.xml  asquire_logo_s.xml  backg.xml  ic_launcher_foreground.xml  info_icon.xml  record_start.xml
asquire-tyle/src/main/res/drawable-v24/: ic_launcher_foreground.xml
asquire-tyle/src/main/res/layout/: activity_main.xml  activity_record.xml  activity_survey.xml
asquire-tyle/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
asquire-tyle/src/main/res/values/: colors.xml  strings.xml  themes.xml
asquire-tyle/src/main/res/values-night/: themes.xml
asquire-tyle/src/test/java/aashi/fiaxco/asquiretyle0x0a/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
